# betfair-adapter-rs

./: .cargo .cargo  .gitignore  .rusty-hook.toml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  _typos.toml  clippy.toml  deny.toml  example_config.example.toml  flake.nix  rust-toolchain.toml  rustc-ice-2024-05-07T18_03_15-84468.txt
crates/betfair-adapter/: CHANGELOG.md  Cargo.toml
crates/betfair-adapter/benches/: rpc.rs
crates/betfair-adapter/src/: config.rs  error.rs  lib.rs  provider.rs  secret.rs  urls.rs
crates/betfair-adapter/src/provider/: authenticated.rs  unauthenticated.rs
crates/betfair-adapter/tests/integration/: cancel_bets.rs  keep_alive.rs  list_market_book.rs  list_market_catalogue.rs  utils.rs
crates/betfair-cert-gen/: CHANGELOG.md  Cargo.toml
crates/betfair-cert-gen/src/: lib.rs
crates/betfair-rpc-adapter/: Cargo.toml
crates/betfair-rpc-adapter/src/: auth.rs  error.rs  keep_alive.rs  lib.rs  secret.rs  urls.rs
crates/betfair-rpc-adapter/src/provider/: mod.rs
crates/betfair-rpc-adapter/tests/integration/: cancel_bets.rs  keep_alive.rs  list_market_catalogue.rs  main.rs  single_market_book.rs  single_market_catalogue.rs  utils.rs
crates/betfair-rpc-server-mock/: CHANGELOG.md  Cargo.toml
crates/betfair-rpc-server-mock/src/: lib.rs  urlencoded_matcher.rs
crates/betfair-rpc-server-mock/tests/integration/: cancel_bets.rs  keep_alive.rs  list_market_book.rs  list_market_catalogue.rs  main.rs
crates/betfair-stream-api/: CHANGELOG.md  Cargo.toml
crates/betfair-stream-api/benches/: cache_update.rs  codec.rs  deserialize.rs  process_message.rs
crates/betfair-stream-api/fixtures/: 29788105  29788106  29788457
crates/betfair-stream-api/src/: connection.rs  error.rs  lib.rs  provider.rs  raw_stream.rs  specialization.rs  tls_sream.rs
crates/betfair-stream-api/src/cache/: market_subscriber.rs  mod.rs  order_subscriber.rs
crates/betfair-stream-api/src/connection/: builder.rs  cron.rs  handshake.rs  mod.rs
crates/betfair-stream-api/src/provider/: available_cache.rs  avilable_cache.rs  cache.rs  market_book_cache.rs  orderbook_cache.rs  orderbook_runner_cache.rs  runner_book_cache.rs  stream.rs
crates/betfair-stream-api/src/specialization/: market_subscriber.rs  order_subscriber.rs
crates/betfair-stream-api/tests/integration/: handshake.rs  heartbeat.rs  main.rs  market_subscribe.rs  utils.rs
crates/betfair-stream-api/tests/module/: build_cache_from_prod.rs  main.rs
crates/betfair-stream-server-mock/: CHANGELOG.md  Cargo.toml
crates/betfair-stream-server-mock/src/: lib.rs  tls.rs
crates/betfair-stream-server-mock/tests/integration/: handshake.rs  heartbeat.rs  market_subscribe.rs
crates/betfair-stream-types/: CHANGELOG.md  Cargo.toml  ESASwaggerSchema.json  README.md
crates/betfair-stream-types/benches/: serialize.rs
crates/betfair-stream-types/src/: all_request_types_example.rs  all_response_types_example.rs  authentication_message.rs  authentication_message_all_of.rs  connection_message.rs  connection_message_all_of.rs  heartbeat_message.rs  key_line_definition.rs  key_line_selection.rs  lib.rs  market_change.rs  market_change_message.rs  market_change_message_all_of.rs  market_data_filter.rs  market_definition.rs  market_filter.rs  market_subscription_message.rs  market_subscription_message_all_of.rs  order.rs  order_change_message.rs  order_change_message_all_of.rs  order_filter.rs  order_market_change.rs  order_runner_change.rs  order_subscription_message.rs  order_subscription_message_all_of.rs  price_ladder_definition.rs  request.rs  request_message.rs  response.rs  response_message.rs  runner_change.rs  runner_definition.rs  status_message.rs  status_message_all_of.rs  strategy_match_change.rs
crates/betfair-stream-types/src/request/: authentication_message.rs  heartbeat_message.rs  market_subscription_message.rs  order_subscription_message.rs
crates/betfair-stream-types/src/response/: connection_message.rs  market_change_message.rs  order_change_message.rs  status_message.rs
crates/betfair-stream-types/tests/: test.rs
crates/betfair-stream-types/tests/resources/: streaming_ocm_FULL_IMAGE_MISSING_RC.json
crates/betfair-typegen/: CHANGELOG.md  Cargo.toml
crates/betfair-typegen/assets/: AccountAPING.xml  SportsAPING.xml
crates/betfair-typegen/src/: aping_ast.rs  gen_v1.rs  lib.rs
crates/betfair-typegen/src/aping_ast/: data_type.rs  types.rs
crates/betfair-typegen/src/gen_v1/: data_types.rs  documentation.rs  injector.rs  rpc_calls.rs  top_level_preamble.rs  type_resolver.rs
crates/betfair-typegen/src/generator/: mod.rs  output.rs  settings.rs
crates/betfair-typegen/tests/e2e/: main.rs
crates/betfair-types/: CHANGELOG.md  Cargo.toml  build.rs
crates/betfair-types/assets/: SportsAPING.xml
crates/betfair-types/benches/: numeric.rs
crates/betfair-types/betfair-typegen/: Cargo.toml
crates/betfair-types/betfair-typegen/src/: aping_ast.rs  ast.rs  gen_v1.rs  lib.rs
crates/betfair-types/betfair-xml-parser/: Cargo.toml
crates/betfair-types/betfair-xml-parser/src/: common.rs  data_type.rs  exception_type.rs  lib.rs  operation.rs  (+1 more)
crates/betfair-types/src/: bot_login.rs  customer_order_ref.rs  customer_ref.rs  customer_strategy_ref.rs  handicap.rs  lib.rs  logout.rs  numeric.rs  price.rs  shared.rs  size.rs  tests.rs
crates/betfair-types/tests/: available_events.rs  bot_login.rs  cancel_bets.rs  keep_alive.rs  list_cleared_orders.rs  list_competitions.rs  list_countries.rs  list_current_orders.rs  list_event_types.rs  list_events.rs  list_market_book.rs  list_market_catalogue.rs  list_market_profit_and_loss.rs  list_market_types.rs  list_runner_book.rs  list_time_ranges.rs  list_venues.rs  logout.rs  place_orders.rs  reaplace_orders.rs
crates/betfair-xml-parser/: CHANGELOG.md  Cargo.toml
crates/betfair-xml-parser/src/: common.rs  data_type.rs  exception_type.rs  lib.rs  operation.rs  simple_type.rs
examples/stream-api-subscribe-to-market/: Cargo.toml
examples/stream-api-subscribe-to-market/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+63 files in other folders)
