[workspace]
resolver = "2"
members = ["crates/*", "examples/*", "xtask"]

[workspace.package]
version = "0.1.0"
authors = ["Roberts Pumpurs <roberts@pumpurlabs.com>"]
repository = "https://github.com/roberts-pumpurs/betfair-adapter-rs"
homepage = "https://github.com/roberts-pumpurs/betfair-adapter-rs"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -2, level = "deny" }
perf = { priority = -3, level = "deny" }
correctness = { priority = -4, level = "deny" }
restriction = { priority = -5, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }
pedantic = { priority = -8, level = "deny" }
nursery = { priority = -9, level = "deny" }

cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
dbg_macro = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
missing_trait_methods = "allow"
wildcard_imports = "allow"
shadow_reuse = "allow"
exhaustive_enums = "allow"
ref_patterns = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
future_not_send = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"
negative_feature_names = "allow"
std_instead_of_alloc = "allow"
expect_used = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
self_named_module_files = "allow"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "deny", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }

[workspace.dependencies]
# Our crates
betfair-adapter = { path = "crates/betfair-adapter" }
betfair-types = { path = "crates/betfair-types" }
betfair-stream-types = { path = "crates/betfair-stream-types" }
betfair-stream-server-mock = { path = "crates/betfair-stream-server-mock" }
betfair-stream-api = { path = "crates/betfair-stream-api" }
betfair-xml-parser = { path = "crates/betfair-xml-parser" }
betfair-rpc-server-mock = { path = "crates/betfair-rpc-server-mock" }
betfair-typegen = { path = "crates/betfair-typegen" }
betfair-cert-gen = { path = "crates/betfair-cert-gen" }

# Utils
rust_decimal = "1"
rust_decimal_macros = "1"
rand = { version = "0.8", features = ["small_rng"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
eyre = "0.6"
thiserror = "1.0"
heck = "0.4"
nanoid = "0.4"
typed-builder = "0.18"
redact = { version = "0.1", features = ["serde"] }
trait-variant = "0.1"
itertools = "0.12"
backoff = { version = "0.4", features = ["tokio"] }
log = "0.4"

# Async
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-rustls = "0.25"
futures-concurrency = "7.4"
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
pin-project = "1"

# Parsing
serde-xml-rs = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# HTTP
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "gzip", "deflate", "rustls-tls", "stream"] }
url = "2"
http = "1"
rustls = "0.22"
rustls-native-certs = "0.7"

# tls
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem"] }
rsa = "0.9"

# Type gen
quote = "1"
proc-macro2 = "1"
syn = "2"

# Testnig
rstest = { version = "0.18" }
proptest = "1"
wiremock = "0.5"
test-log = { version = "0.2", features = ["trace"], default-features = false }
pretty_assertions = "1"
json-rpc-types = "1"

# Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log", "json", "valuable", "tracing"] }
tracing-error = "0.2"

# xtask & examples
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
color-eyre = "0.6"
toml = "0.8"
