[package]
name = "xtask"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
clap.workspace = true
xshell.workspace = true
eyre.workspace = true
color-eyre.workspace = true
betfair-cert-gen.workspace = true
