[package]
name = "betfair-adapter"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
redact.workspace = true
tracing.workspace = true
betfair-types.workspace = true
eyre.workspace = true
url.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tokio.workspace = true
test-log.workspace = true
wiremock.workspace = true
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
toml.workspace = true
