[package]
name = "betfair-adapter"
readme = "../../README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
# Use f64 instead of rust_decimal for Price, Size and other numeric values (faster but less precise)
fast-floats = ["betfair-types/fast-floats"]

[lints]
workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
redact.workspace = true
tracing.workspace = true
betfair-types.workspace = true
eyre.workspace = true
tokio.workspace = true
backon.workspace = true
url.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true
tokio.workspace = true
test-log.workspace = true
wiremock.workspace = true
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
pretty_assertions.workspace = true
toml.workspace = true
