[package]
name = "betfair-adapter"
readme = "../../README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
redact.workspace = true
tracing.workspace = true
betfair-types.workspace = true
eyre.workspace = true
tokio.workspace = true
backon.workspace = true
url.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true
tokio.workspace = true
test-log.workspace = true
wiremock.workspace = true
pretty_assertions.workspace = true
toml.workspace = true
criterion.workspace = true
betfair-rpc-server-mock.workspace = true
serde_json.workspace = true

[[bench]]
name = "rpc"
harness = false
