[package]
name = "betfair-cert-gen"
readme = "../../README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rcgen.workspace = true
rsa.workspace = true
rand.workspace = true
eyre.workspace = true
