[package]
name = "betfair-rpc-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
hyper.workspace = true
redact.workspace = true
tracing.workspace = true
betfair-types.workspace = true
eyre.workspace = true
url.workspace = true
futures-concurrency.workspace = true
futures.workspace = true
chrono.workspace = true
http.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true
test-log.workspace = true
wiremock.workspace = true
