[package]
name = "betfair-rpc-server-mock"
readme = "../../README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
# Use rust_decimal instead of f64 for Price, Size and other numeric values (slower but more precise)
decimal-primitives = ["betfair-types/decimal-primitives", "betfair-adapter/decimal-primitives"]

[dependencies]
betfair-adapter.workspace = true
betfair-types.workspace = true
url.workspace = true
reqwest.workspace = true
serde_json.workspace = true
wiremock.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true
tokio.workspace = true
test-log.workspace = true
wiremock.workspace = true
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
pretty_assertions.workspace = true
