[package]
name = "betfair-rpc-server-mock"
readme = "../../README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
betfair-adapter.workspace = true
betfair-types.workspace = true
url.workspace = true
serde_json.workspace = true
wiremock.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rstest.workspace = true
tokio.workspace = true
test-log.workspace = true
wiremock.workspace = true
pretty_assertions.workspace = true
compact_str.workspace = true
