[package]
name = "betfair-stream-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
exclude.workspace = true

[features]
default = []
# Use f64 instead of rust_decimal for Price, Size and other numeric values (faster but less precise)
fast-primitives = ["betfair-stream-types/fast-primitives", "betfair-adapter/fast-primitives"]

[dependencies]
backon.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
futures.workspace = true
url.workspace = true
betfair-stream-types.workspace = true
betfair-adapter.workspace = true
tracing.workspace = true
eyre.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
rustls.workspace = true
serde_json.workspace = true
rustls-native-certs.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
