[package]
name = "betfair-stream-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
exclude.workspace = true

[features]
default = []
# Use rust_decimal instead of f64 for Price, Size and other numeric values (slower but more precise)
decimal-primitives = ["betfair-stream-types/decimal-primitives", "betfair-adapter/decimal-primitives"]

[dependencies]
backon.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
futures.workspace = true
url.workspace = true
betfair-stream-types.workspace = true
betfair-adapter.workspace = true
tracing.workspace = true
eyre.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
rustls.workspace = true
serde_json.workspace = true
rustls-native-certs.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
