[package]
name = "betfair-stream-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
exclude.workspace = true

[features]
simd = ["dep:simd-json"]

[dependencies]
backon.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
futures.workspace = true
url.workspace = true
betfair-stream-types.workspace = true
betfair-adapter.workspace = true
tracing.workspace = true
eyre.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
rustls.workspace = true
serde_json.workspace = true
rustls-native-certs.workspace = true
simd-json = { version = "0.14", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true
betfair-types.workspace = true
smallvec.workspace = true
compact_str.workspace = true

[lints]
workspace = true

[[bench]]
name = "deserialize"
harness = false

[[bench]]
name = "cache_update"
harness = false

[[bench]]
name = "process_message"
harness = false

[[bench]]
name = "codec"
harness = false
