[package]
name = "betfair-stream-server-mock"
readme = "../../README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
betfair-stream-types.workspace = true
url.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures-util.workspace = true
rustls.workspace = true
eyre.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
betfair-stream-api = { workspace = true }

[dev-dependencies]
chrono.workspace = true
wiremock.workspace = true
rstest.workspace = true
tokio-stream.workspace = true
futures.workspace = true
betfair-adapter.workspace = true
test-log.workspace = true
rust_decimal_macros.workspace = true
rust_decimal.workspace = true
eyre.workspace = true
pretty_assertions.workspace = true
betfair-rpc-server-mock.workspace = true
betfair-stream-server-mock = { workspace = true, features = ["integration-test"] }

[features]
integration-test = ["betfair-stream-api/integration-test"]
