[package]
name = "betfair-stream-types"
readme = "README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
# Use f64 instead of rust_decimal for Price and Size (faster but less precise)
fast-floats = ["betfair-types/fast-floats"]

[dependencies]
serde.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
typed-builder.workspace = true
betfair-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
json-rpc-types.workspace = true
