[package]
name = "betfair-stream-types"
readme = "README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
# Use rust_decimal instead of f64 for Price and Size (slower but more precise)
decimal-primitives = ["betfair-types/decimal-primitives", "dep:rust_decimal", "dep:rust_decimal_macros"]

[dependencies]
serde.workspace = true
chrono.workspace = true
rust_decimal = { workspace = true, optional = true }
rust_decimal_macros = { workspace = true, optional = true }
typed-builder.workspace = true
betfair-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
json-rpc-types.workspace = true
