[package]
name = "betfair-stream-types"
readme = "README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
typed-builder.workspace = true
betfair-types.workspace = true
serde_json.workspace = true
compact_str.workspace = true
smallvec.workspace = true

[dev-dependencies]
json-rpc-types.workspace = true
criterion.workspace = true

[[bench]]
name = "serialize"
harness = false
