[package]
name = "betfair-typegen"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[lints]
workspace = true

[dependencies]
betfair-xml-parser.workspace = true
quote.workspace = true
proc-macro2.workspace = true
rust_decimal.workspace = true
heck.workspace = true
syn.workspace = true
typed-builder.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
serde-xml-rs.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
