[package]
name = "betfair-typegen"
readme = "../../README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
# Use rust_decimal instead of f64 for Price, Size and other numeric values (slower but more precise)
decimal-primitives = ["dep:rust_decimal"]

[dependencies]
betfair-xml-parser.workspace = true
quote.workspace = true
proc-macro2.workspace = true
rust_decimal = { workspace = true, optional = true }
heck.workspace = true
syn.workspace = true
typed-builder.workspace = true
tracing.workspace = true
eyre.workspace = true
[dev-dependencies]
rstest.workspace = true
serde-xml-rs.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
