[package]
name = "betfair-typegen"
readme = "../../README.md"
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
betfair-xml-parser.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true
syn.workspace = true
typed-builder.workspace = true
tracing.workspace = true
eyre.workspace = true
itertools.workspace = true
[dev-dependencies]
rstest.workspace = true
serde-xml-rs.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
