[package]
name = "betfair-types"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
typed-builder.workspace = true
redact.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
betfair-typegen.workspace = true

[dev-dependencies]
rstest.workspace = true
json-rpc-types.workspace = true

[package.metadata.cargo-machete]
ignored = ["chrono", "typed-builder"]
