[package]
name = "betfair-types"
readme = "README.md"
description.workspace = true
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
# Use rust_decimal instead of f64 for Price, Size and other numeric values (slower but more precise)
decimal-primitives = ["dep:rust_decimal", "dep:rust_decimal_macros"]

[dependencies]
serde.workspace = true
chrono.workspace = true
rust_decimal = { workspace = true, optional = true }
rust_decimal_macros = { workspace = true, optional = true }
typed-builder.workspace = true
redact.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
betfair-typegen.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
json-rpc-types.workspace = true

[package.metadata.cargo-machete]
ignored = ["chrono", "typed-builder"]
