[package]
name = "betfair-xml-parser"
readme = "../../README.md"
description.workspace = true
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
serde-xml-rs.workspace = true
serde.workspace = true
log.workspace = true

[dev-dependencies]
rstest.workspace = true
