[package]
name = "stream-api-subscribe-to-market"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
betfair-stream-api.workspace = true
betfair-adapter.workspace = true
eyre.workspace = true
color-eyre.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
