[package]
name = "stream-api-subscribe-to-market"

readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio.workspace = true
betfair-stream-api = { workspace = true, default-features = false }
betfair-adapter.workspace = true
eyre.workspace = true
color-eyre.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
