[package]
name = "betfair-typegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
betfair-xml-parser.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
rust_decimal.workspace = true
chrono.workspace = true

[dev-dependencies]
rstest.workspace = true
